--- a/files/个人中心/styles.css
+++ b/files/个人中心/styles.css
@@ -223,7 +223,7 @@
   width:103px;
   height:34px;
   font-size:9px;
-  color:rgba(51, 204, 204, 0.956862745098039);
+  color:#7EAFAF;
 }
 #u8_text {
   border-width:0px;
@@ -1165,6 +1165,7 @@
   top:386px;
   width:14px;
   height:10px;
+  color:#2F9797;
 }
 #u46_text {
   border-width:0px;
@@ -1191,7 +1192,7 @@
   width:54px;
   height:10px;
   font-size:8px;
-  color:rgba(51, 204, 204, 0.956862745098039);
+  color:#2F9797;
 }
 #u47_text {
   border-width:0px;
@@ -1216,6 +1217,7 @@
   top:430px;
   width:14px;
   height:10px;
+  color:#2F9797;
 }
 #u48_text {
   border-width:0px;
@@ -1242,7 +1244,7 @@
   width:54px;
   height:10px;
   font-size:8px;
-  color:rgba(51, 204, 204, 0.956862745098039);
+  color:#2F9797;
 }
 #u49_text {
   border-width:0px;
